# ds_fusion_app

./: .getignore  .gitignore  FusionDS.spec  README.md  main.py  masses.csv  pyproject.toml  requirements.txt
src/core/: combinations.py  frame.py  mass.py
src/gui/: main_window.py  styles.py  widgets.py
src/utils/: io_handler.py  parser.py
