[project]
name = "ds-fusion-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyinstaller>=6.16.0",
    "pyqt5>=5.15.11",
]

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
